# cycif-seg

./: .gitignore  README.md  change1_stitch.patch  deformationField.nii  pyproject.toml  ram_usage_log.txt
.claude/: settings.local.json
cycif_env/: pyvenv.cfg
cycif_env/Scripts/: activate  activate.bat
src/cycif_seg/: app.py
src/cycif_seg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cycif_seg/cli/: preprocess.py  run_pipeline.py
src/cycif_seg/features/: multiscale.py  zarr_tile_cache.py
src/cycif_seg/instance/: watershed.py  workers.py
src/cycif_seg/io/: ome_tiff.py
src/cycif_seg/model/: rf_pixel.py
src/cycif_seg/predict/: workers.py
src/cycif_seg/preprocess/: batch_plan.py  organize_cycles.py
src/cycif_seg/project/: __init__.py  project.py
src/cycif_seg/stitch/: __init__.py  stitch_core.py
src/cycif_seg/ui/: batch_preprocess_dialog.py  batch_stitch_dialog.py  image_controller.py  main_widget.py  merge_cycles_dialog.py  nuclei_edit_controller.py  project_controller.py  rf_controller.py  settings_panel.py
src/cycif_seg/ui/steps/: step0_stitch_panel.py  step1_preprocess_panel.py  step2a_nuclei_panel.py  step2b_edit_panel.py.orig
src_v0_patched_fast_channel_names/src/cycif_seg/: app.py
src_v0_patched_fast_channel_names/src/cycif_seg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src_v0_patched_fast_channel_names/src/cycif_seg/features/: multiscale.py
src_v0_patched_fast_channel_names/src/cycif_seg/instance/: watershed.py
src_v0_patched_fast_channel_names/src/cycif_seg/preprocess/: __init__.py  organize_cycles.py
src_v0_patched_fast_channel_names/src/cycif_seg/ui/: batch_stitch_dialog.py  image_controller.py  layer_manager.py  main_widget.py  merge_cycles_dialog.py  (+1 more)
tests/: test_elastic_touchup_regression.py  test_registered_zarr_chunking.py  test_registered_zarr_pyramid_resume.py  test_step2a_viewer_loading.py
tests/elastic_touchup_visuals/: fixed_two_islands.ome.tiff  moving_two_islands_distorted.ome.tiff  registered_workers_1.ome.tiff  registered_workers_3.ome.tiff
tools/: diagnose_elastic_touchup.py  log_ram_usage.py
