[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cycif-seg"
version = "0.0.95"
description = "MVP napari app for CycIF segmentation (scribbles + RF pixel classifier)"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "tifffile",
  "zarr>=3",
  "dask[array]",
  "scikit-image",
  "scipy",
  "scikit-learn",
  "itk-elastix",
  "ome-types",
  "napari[pyqt5]",
  "qtpy",
  "superqt",
]

[project.optional-dependencies]
gui = [
  "napari[pyqt5]",
  "qtpy",
  "superqt",
]

[project.scripts]
cycif-seg            = "cycif_seg.app:main"
cycif-seg-preprocess = "cycif_seg.cli.preprocess:main"
cycif-seg-run        = "cycif_seg.cli.run_pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
